Ajout des exemples de variantes "compact rounded" pour le composant Button

--- a/public/index.html
+++ b/public/index.html
@@ -989,6 +989,7 @@
         <qc-button variant="primary" rounded label="Principal"></qc-button>
         <qc-button variant="primary" disabled label="Principal"></qc-button>
         <qc-button variant="primary" compact label="Principal"></qc-button>
+        <qc-button variant="primary" compact rounded label="Principal"></qc-button>
     </div>
 
     <div>
@@ -996,6 +997,7 @@
         <qc-button variant="secondary" rounded label="Secondaire"></qc-button>
         <qc-button variant="secondary" disabled label="Secondaire"></qc-button>
         <qc-button variant="secondary" compact label="Secondaire"></qc-button>
+        <qc-button variant="secondary" compact rounded label="Secondaire"></qc-button>
     </div>
 
     <div>
@@ -1003,6 +1005,7 @@
         <qc-button variant="tertiary" rounded label="Tertiaire"></qc-button>
         <qc-button variant="tertiary" disabled label="Tertiaire"></qc-button>
         <qc-button variant="tertiary" compact label="Tertiaire"></qc-button>
+        <qc-button variant="tertiary" compact rounded label="Tertiaire"></qc-button>
     </div>
 
     <div>
@@ -1010,6 +1013,7 @@
         <qc-button variant="danger" rounded label="Avertissement"></qc-button>
         <qc-button variant="danger" disabled label="Avertissement"></qc-button>
         <qc-button variant="danger" compact label="Avertissement"></qc-button>
+        <qc-button variant="danger" compact rounded label="Avertissement"></qc-button>
     </div>
 </qc-doc-exemple>
 
