--- a/public/index.html
+++ b/public/index.html
@@ -2413,27 +2413,27 @@
 <hr/>
     <h2 id="textfield">Champ texte</h2>
 
+<p>Le champ texte est un espace dans lequel est saisie une information qui tient sur une ou plusieurs lignes de texte.
+  Il peut s’agir d’une combinaison de lettres, de chiffres et de symboles.</p>
+
 <qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
   <form id="formulaire-champs-textes">
     <qc-textfield
-            label="Nom complet"
-            size="lg"
-            required
+            label="Entrez votre âge"
+            size="sm"
     >
       <input type="text"
-             name="code-postal"
-             placeholder="ex : Jean Tremblay"
-      />
+             name="text-sm"
+             placeholder="25" />
     </qc-textfield>
 
     <qc-textfield
-            label="Champ désactivé"
-            size="lg"
+            label="Entrez votre code postal"
+            size="md"
     >
       <input type="text"
-             name="disabled-field"
-             placeholder="Ce champ est désactivé"
-             disabled
+             name="text-md"
+             placeholder="ex : G1A 1A1"
       />
     </qc-textfield>
 
@@ -2441,32 +2441,61 @@
       <qc-textfield
               label="Téléphone"
               size="md"
-        ><input type="text"
-                name="telephone"
-                placeholder="(123) 456-7890"
-                required
+              placeholder="(123) 456-7890"
+      ><input type="text"
+              name="text-md"
+              placeholder="ex : G1A 1A1"
       /></qc-textfield>
 
       <qc-textfield
+              name="poste"
               label="Poste"
               size="sm"
-      >
-        <input type="text"
-               name="poste"
-        />
-      </qc-textfield>
+              placeholder="1234"
+      ></qc-textfield>
     </div>
 
+
     <qc-textfield
-            label="Champ de texte multiligne"
-            description="Lorem ipsum dolor sit amet, consectetur adipiscing elit."
+            name="text-lg"
+            label="Entrez votre ville"
+            size="lg"
+            placeholder="Ceci est un très long placeholder"
+    ></qc-textfield>
+
+    <qc-textfield
+            name="text-xl"
+            label="Entrez votre adresse courriel"
+            size="xl"
+            placeholder="ex : jeantremblay@exemple.com"
+            required
+    ></qc-textfield>
+
+    <qc-textfield
+            name="text-xxl"
+            label="Entrez votre adresse"
             size="xxl"
-            max-length="10"
+            disabled
+    ></qc-textfield>
+
+    <qc-textfield
+            name="zone-xl"
+            label="Commentaires"
+            description="Vous pouvez entrer des commentaires dans la zone de texte ci-dessous."
+            size="xl"
+            display="area"
+    ></qc-textfield>
+
+    <qc-textfield
+            name="zone-xxl"
+            label="Suggestions"
+            description="Vous pouvez entrer des suggestions dans la zone de texte ci-dessous."
+            size="xxl"
+            display="area"
+            max-length="50"
             required
             invalid-text="Message d'erreur personnalisé"
-    >
-      <textarea name="zone-xxl"></textarea>
-    </qc-textfield>
+    ></qc-textfield>
 
     <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
   </form>
@@ -2476,15 +2505,22 @@
 
     form.addEventListener("submit", (event) => {
       event.preventDefault();
+
       let isValid = true;
 
-      const requiredFields = form.querySelectorAll("[required]");
+      const requiredFields = form.querySelectorAll("qc-textfield[required]");
 
       requiredFields.forEach(field => {
         const value = field.value?.trim();
         const maxLength = parseInt(field.getAttribute("max-length"), 10);
 
         if (!value) {
+          field.invalid = true;
+          isValid = false;
+          return;
+        }
+
+        if (!isNaN(maxLength) && value.length > maxLength) {
           field.invalid = true;
           isValid = false;
           return;
