Boutons - retrait du style bouton de la doc pour se baser sur ceux de qc-button ;   mise à jour des exemples et ajustements par les ancres.

--- a/public/index.html
+++ b/public/index.html
@@ -1055,7 +1055,7 @@
     </button>
 </qc-doc-exemple>
 
-<qc-doc-exemple caption="Exemples de boutons simples avec leur variant compacte.">
+<qc-doc-exemple caption="Exemples de boutons simples avec leur variante compacte.">
     <div>
         <button class="qc-button qc-simple">
             <qc-icon type="information"></qc-icon>
@@ -1078,6 +1078,16 @@
             Action
         </button>
     </div>
+</qc-doc-exemple>
+
+<qc-doc-exemple caption="Exemples avec un lien et un champ de soumission">
+        <a href="javascript:void(0);"
+           class="qc-button qc-primary"
+           role="button"
+        >
+            Action
+        </a>
+        <input type="submit" value="Action" class="qc-button qc-primary" />
 </qc-doc-exemple>
 
 
@@ -1575,7 +1585,7 @@
       </label>
     </qc-checkbox>
 
-    <button class="btn btn-sm btn-primary"
+    <button class="qc-button qc-primary qc-compact"
             type="submit">
       S'inscrire
     </button>
@@ -1807,7 +1817,7 @@
 
     </qc-choice-group>
 
-    <button class="btn btn-sm btn-primary" type="submit">
+    <button class="qc-button qc-primary qc-compact" type="submit">
       Soumettre
     </button>
   </form>
@@ -2371,7 +2381,7 @@
       <textarea name="zone-xxl"></textarea>
     </qc-textfield>
 
-    <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
+    <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
   </form>
 
   <script>
