--- a/public/index.html
+++ b/public/index.html
@@ -2660,7 +2660,7 @@
             </select>
         </qc-select>
 
-        <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
+        <button type="submit" class="qc-button qc-primary qc-compact">Envoyer</button>
     </form>
 
     <script>
