--- a/public/index.html
+++ b/public/index.html
@@ -2847,16 +2847,34 @@
 <h3>Exemples</h3>
 <qc-doc-exemple caption="Exemples d'utilisation d'icônes avec différentes propriétés."
                 id="icons-exemple">
-    <qc-icon type="success" color="pink-regular" size="xs"></qc-icon>
-    <qc-icon type="success" color="blue-piv" size="sm"></qc-icon>
-    <qc-icon type="success" color="grey-dark" size="md"></qc-icon>
-    <qc-icon type="success" color="purple" size="lg"></qc-icon>
-    <qc-icon type="success" color="success" size="xl"></qc-icon>
+    <div>
+        <qc-icon type="success" color="pink-regular" size="xs"></qc-icon>
+        <qc-icon type="success" color="blue-piv" size="sm"></qc-icon>
+        <qc-icon type="success" color="grey-dark" size="md"></qc-icon>
+        <qc-icon type="success" color="purple" size="lg"></qc-icon>
+        <qc-icon type="success" color="success" size="xl"></qc-icon>
+    </div>
+    <div>
+        <qc-icon type="arrow-up"  size="lg"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="45"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="90"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="135"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="180"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="225"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="-90"></qc-icon>
+        <qc-icon type="arrow-up"  size="lg" rotate="-45"></qc-icon>
+    </div>
+
 
 </qc-doc-exemple>
 <style>
-    #icons-exemple qc-icon {
-        margin-right: var(--qc-spacer-sm);
+    #icons-exemple  {
+        div:has(> qc-icon) {
+            margin-bottom: var(--qc-spacer-content-block-mb);
+        }
+        qc-icon {
+            margin-right: var(--qc-spacer-sm);
+        }
     }
 </style>
 
