--- a/public/index.html
+++ b/public/index.html
@@ -1013,6 +1013,12 @@
             <div>
                 <button class="qc-button qc-primary qc-compact">Principal</button>
             </div>
+            <div>
+                <button class="qc-button qc-primary qc-compact qc-button-rounded">Principal</button>
+            </div>
+            <div>
+                <button class="qc-button qc-primary qc-compact" disabled>Principal</button>
+            </div>
         </div>
 
         <div class="qc-col-sm-12 qc-col-lg-3">
@@ -1027,6 +1033,12 @@
             </div>
             <div>
                 <button class="qc-button qc-secondary qc-compact">Secondaire</button>
+            </div>
+            <div>
+                <button class="qc-button qc-secondary qc-compact qc-button-rounded">Secondaire</button>
+            </div>
+            <div>
+                <button class="qc-button qc-secondary qc-compact" disabled>Secondaire</button>
             </div>
         </div>
 
@@ -1043,6 +1055,12 @@
             <div>
                 <button class="qc-button qc-tertiary qc-compact">Tertiaire</button>
             </div>
+            <div>
+                <button class="qc-button qc-tertiary qc-compact qc-button-rounded">Tertiaire</button>
+            </div>
+            <div>
+                <button class="qc-button qc-tertiary qc-compact" disabled>Tertiaire</button>
+            </div>
         </div>
 
         <div class="qc-col-sm-12 qc-col-lg-3">
@@ -1057,6 +1075,12 @@
             </div>
             <div>
                 <button class="qc-button qc-danger qc-compact">Avertissement</button>
+            </div>
+            <div>
+                <button class="qc-button qc-danger qc-compact qc-button-rounded">Avertissement</button>
+            </div>
+            <div>
+                <button class="qc-button qc-danger qc-compact" disabled>Avertissement</button>
             </div>
         </div>
     </div>
