Champ texte - ajustement des fichiers de test suite au changement des tailles + ajout d’un composant démo pour le champ texte

--- a/public/index.html
+++ b/public/index.html
@@ -2371,7 +2371,8 @@
 <hr/>
     <h2 id="textfield">Champ texte</h2>
 
-<qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états. Soumettre le formulaire pour voir les messages d'erreur.">
+
+<qc-doc-exemple caption="Exemples 1 - différents champs de texte. Soumettre le formulaire pour voir les messages d'erreur.">
   <form id="formulaire-champs-textes">
     <qc-textfield
             label="Nom complet"
@@ -2505,7 +2506,7 @@
 
 <h4>Champs alignés horizontalement (classe <code>qc-textfield-row</code>)</h4>
 
-<p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne causent pas décalage. <br/>
+<p>Les champs regroupés sur une ligne peuvent être placés dans un div avec la classe <code>qc-textfield-row</code>. De cette façon, les messages d'erreur ne provoquent pas de décalage. <br/>
   Voir le code des champs Téléphone et Poste dans l'exemple ci-dessus.</p>
 
 <h4>Attributs</h4>
