Correction d'erreurs typographiques dans la documentation (SearchBar).

--- a/public/index.html
+++ b/public/index.html
@@ -950,13 +950,13 @@
       <td>name</td>
       <td>Texte</td>
       <td>q</td>
-      <td>Nom du champs dans le formulaire</td>
+      <td>Nom du champ dans le formulaire</td>
     </tr>
     <tr>
       <td>value</td>
       <td>Texte</td>
-      <td>Chaine vide</td>
-      <td>Valeur du champs dans le formulaire</td>
+      <td>Chaîne vide</td>
+      <td>Valeur du champ dans le formulaire</td>
     </tr>
     <tr>
       <td>input-*</td>
@@ -975,7 +975,7 @@
       <td>submit-*</td>
       <td>na</td>
       <td>na</td>
-      <td>Tout attribut commençant par <code>input-</code> sera ajouté au bouton du composant. Utile
+      <td>Tout attribut commençant par <code>submit-</code> sera ajouté au bouton du composant. Utile
         par exemple pour lui donner un nom et une valeur.
       </td>
     </tr>
@@ -990,9 +990,9 @@
 </div>
 
 <h3>Zone d’ajout de contenu HTML</h3>
-<p>Aucune zone d’ajout de contenu n'est définie pour ce composant</p>
+<p>Aucune zone d’ajout de contenu n'est définie pour ce composant.</p>
 
-<h3>Précision concernant le DOM d’ombre (Shadow dom)</h3>
+<h3>Précision concernant le DOM d’ombre (Shadow DOM)</h3>
 <p>Ce composant ne contient pas de DOM d’ombre.</p>
 
     <h2 id="buttons">Boutons</h2>
