Correction d'erreurs typographiques dans la documentation (PivFooter)

--- a/public/index.html
+++ b/public/index.html
@@ -1415,13 +1415,13 @@
 <qc-doc-exemple id="piv-footer-1"
                 caption="Exemple de pied de page du PIV de base">
   <qc-piv-footer>
-    <nav aria-label="Navigation du pied-de-page">
+    <nav aria-label="Navigation du pied de page">
       <ul>
         <li><a href="/">Accessibilité</a></li>
         <li><a href="/">Plan du site</a></li>
         <li><a href="/">Accès à l’information</a></li>
         <li><a href="/">Politique de confidentialité</a></li>
-        <li><a href="/">Condition d’utilisation</a></li>
+        <li><a href="/">Conditions d’utilisation</a></li>
         <li><a href="/">À propos de Québec.ca</a></li>
       </ul>
     </nav>
@@ -1436,7 +1436,7 @@
           logo-src="img/piv-MCE-theme-clair.svg"
           logo-src-dark-theme="img/piv-MCE-theme-sombre.svg"
   >
-    <nav aria-label="Navigation du pied-de-page">
+    <nav aria-label="Navigation du pied de page">
       <ul>
         <li><a href="/">Accessibilité</a></li>
         <li><a href="/">Plan du site</a></li>
@@ -1521,7 +1521,7 @@
       <td>copyright-text</td>
       <td>Texte</td>
       <td>© Gouvernement du Québec, &lt;année en cours AAAA&gt;</td>
-      <td>Texte du lien de changement de langue</td>
+      <td>Texte du lien de droit d'auteur affiché dans le pied de page.</td>
     </tr>
     <tr>
       <td>copyright-url</td>
@@ -1534,7 +1534,7 @@
           <dd>https://www.quebec.ca/en/copyright</dd>
         </dl>
       </td>
-      <td>l’adresse de la page du droit d’auteur sur quebec.ca</td>
+      <td>L’adresse de la page du droit d’auteur sur quebec.ca</td>
     </tr>
     </tbody>
   </table>
@@ -1542,8 +1542,8 @@
 
 <qc-notice type="information">Les images du pied de page PIV doivent respecter
   <qc-external-link><a href="https://www.piv.gouv.qc.ca/fileadmin/documents/guide/section1_general.pdf">les
-    normes graphiques du système d’identification visuel</a>. Nous vous invitons à privilégier le format
-    SVG, qui permet de conserver la lisibilité de l’image en cas de zoom..
+    normes graphiques du système d’identification visuelle.</a>. Nous vous invitons à privilégier le format
+    SVG, qui permet de conserver la lisibilité de l’image en cas de zoom.
   </qc-external-link>
 </qc-notice>
 
@@ -1551,7 +1551,7 @@
 
 <p>Ci-dessous, les zones d’ajout de contenu HTML (balise &lt;slot&gt;) délimitées en pointillé.</p>
 <qc-doc-exemple id="qc-piv-footer-slots"
-                caption="Présentation des zones d’ajout de contenu du pied-de-page PIV">
+                caption="Présentation des zones d’ajout de contenu du pied de page PIV">
   <qc-piv-footer>
     <div style="border:2px dashed;padding: var(--qc-spacer-xs);">
       Contenu par défaut
